		- fixed invalid memory access bug in viscoelastic
		  displacement joint Jacobian matrix initial assembly
		  (Reinhard Resch); assembly still needs work
		- fixed bug in EasyAnim post-processing of total joints
		- fixed bug in strain gage priv data (noted by Jason)
		- fixed EOF handling on arm
		- fixed check for body connected to modal node
		  (noted by Reinhard Resch)

MBDyn 1.7.0
	Enhancements:
		- (optional) new handling of math expressions and
		  "string" drive caller (With the contribution
		  of Ankit Aggarwal during Google Summer of Code 2015)
	Backward compatibility issues:
		- (input and) output of "remarks" changed
	Known issues:
		- aeromodal with rigid-body motion needs work
		- deformable displacement joint initial assembly broken
		- modal joint initial assembly with initial modal disp. broken
	Bug fixes:
		- fixed math parser bug with undefined vare at beginning
		  of expression (noted by Andrea Zanoni)
		- fixed potential buffer overflow when parsing long numbers
		- fixed use of 'reference' for absolute/relative vector drives
		  (noted by Doug Baldwin)

MBDyn 1.6.1
	Enhancements:
		- added hostname support to utils
		- added module for file drive input from LeapMotion device
		- rod without offset now works with displacement nodes
		- added several modules (Reinhard Resch)
		- added autodiff vectorialization (Reinhard Resch)
		- added support for OpenBLAS (Reinhard Resch)
		- added support for UDP to socket-based communication
		- added configurable types to socket-based communication
		- added Bezier-based rod joint (Andrea Zanoni)
	Backward compatibility issues:
	Known issues:
		- aeromodal with rigid-body motion needs work
		- deformable displacement joint initial assembly broken
		- modal joint initial assembly with initial modal disp. broken
	Bug fixes:
		- fixed build with RTAI configured without inlining
		- fixed math parser bug with function calls in expressions
		- fixed deadlock in recursive string parser calls