@@ -29,6 +29,8 @@ MBDyn 1.X-Devel
 		- fixed EOF handling on arm
 		- fixed check for body connected to modal node
 		  (noted by Reinhard Resch)
+		- fixed parsing of modal joint "origin node" in string format
+		  (noted by Reinhard Resch)
 
 MBDyn 1.7.0
 	Enhancements:
